--- a/package.json
+++ b/package.json
@@ -1,27 +1,50 @@
 {
-  "name": "vibingcode",
+  "name": "agent-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "cleanup-results": "ts-node src/scripts/cleanup-results.ts",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@number-flow/react": "^0.5.7",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
+    "color-bits": "^1.1.0",
+    "framer-motion": "^12.10.4",
+    "lucide-react": "^0.479.0",
+    "marked": "^15.0.7",
+    "motion": "^12.5.0",
+    "next": "15.2.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "react-markdown": "^10.1.0",
+    "react-scan": "^0.3.2",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.2.2",
+    "shiki": "^3.2.1",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.4",
+    "typescript": "^5"
   }
 }
